# chumakovi_bot

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  consts.py  main.py  schemas.py  utils.py
src/service/: base.py  keyboard.py  photo.py  voice.py
